fixed resposive and spacing

--- a/website1/assets/css/style.css
+++ b/website1/assets/css/style.css
@@ -1,6 +1,6 @@
-body{
+/* body{
     background: #BDBDBD;
-}
+} */
 
 .tagline-section{
     min-height: 90vh;
